@@ -45,6 +45,8 @@ In alphabetical order (by last name)
 ** lambda {...}.should_change(obj, :message)
 ** ar_subclass.should_have(n).errors_on(:attribute)
 ** mock_model in Spec::Rails
+* Ola Bini
+** Paired with Aslak to iron out minor JRuby issues.
 * Bob Cotton
 ** Support for context_setup and context_teardown (now before(:all) and after(:all))
 ** Patch [#9678] Custom runner command line switch, and multi-threaded runner
