@@ -3,7 +3,7 @@ module Spec
     module VERSION #:nodoc:
       MAJOR = 0
       MINOR = 2
-      TINY  = 2
+      TINY  = 3
 
       STRING = [MAJOR, MINOR, TINY].join('.')
     end
